<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ainappen</string>

    <string-array name="top_level_options">
        <item>Ärenden</item>
        <item>Karta</item>
        <item>Kontakter</item>
        <item>Information</item>
    </string-array>
    
    <string-array name="classifications">
        <item>Okänt</item>
        <item>Snatteri</item>
        <item>Våld mot tjänsteman</item>
        <item>Helikopterrån</item>
        <item>Mord</item>
        <item>Tidelag</item>
    </string-array>

    <string name="camera_actionbar_button">Camera</string>
    <string name="edit_case">Redigera ärende</string>
    <string name="action_settings">Settings</string>
    <string name="case_string">Ärende</string>
    <string name="map">Karta</string>
    <string name="information">Information</string>
    <string name="contacts">Kontakter</string>
    <string name="hello_world">Hello world!</string>
    <string name="laws">Lagar</string>
    <string name="guidelines">Riktlinjer</string>
    <string name="add_new_case">Skapa nytt ärende</string>
    <string name="crime_classification">Brottsrubricering</string>
    <string name="id">Id</string>
    <string name="location">Plats</string>
    <string name="create_case">Skapa ärende</string>
    <string name="commander">Befälhavare-Id</string>
    <string name="date">Datum</string>
    <string name="status">Status</string>
    <string name="description">Beskrivning</string>
    <string name="add_new_obstacle">Lägg till hinder</string>
    <string name="visual_settings">Inställningar</string>
    <string name="first_name">Förnamn</string>
    <string name="last_name">Efternamn</string>
    <string name="job_title">Befattning</string>
    <string name="phone_number">Telefonnummer</string>
    <string name="add_contact">Skapa kontakt</string>
    <string name="done">Klar</string>
    <string name="incorrectLoginToast">Fel användarnamn eller lösenord!</string>

    <string-array name="case_status">
        <item>Inrapporterad</item>
        <item>Under utredning</item>
        <item>Utredning avslutad</item>
    </string-array>

    <string name="userIdInput">Identifikation</string>
    <string name="userPassword">Lösenord</string>
    <string name="userLoginButton">Logga in</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="first">First</string>
    <string name="call">Call</string>
    <string name="title_activity_call">CallActivity</string>
    <string name="databaseLoginButton">Login(DATABASECHECK)</string>
    <string name="crimeDate">Datum då brott begicks</string>
    <string name="save_case">Spara ärende</string>
    <string name="priority">Prioritet</string>
    <string name="call_string">Ringer</string>
    <string name="author">Skapare</string>
    

</resources>