<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crime_classification" />

        <EditText
            android:id="@+id/classification_add_case"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority" />

        <EditText
            android:id="@+id/priority_add_case"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status" />

        <Spinner
            android:id="@+id/spinner_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <EditText
            android:id="@+id/description_add_case"
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:ems="10"
            android:gravity="left"
            android:inputType="text"
            android:lines="3"
            android:maxLines="3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crimeDate" />

        <CalendarView
            android:id="@+id/crimedate_add_case"
            android:layout_width="match_parent"
            android:layout_height="234dp" />

        <Button
            android:id="@+id/addCaseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_case" />
    </LinearLayout>

</ScrollView>