<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/crime_classification_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crime_classification" />

            <TextView
                android:id="@+id/crime_classification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="@dimen/case_data_font_size" />

            <TextView
                android:id="@+id/location_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/location" />

            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="@dimen/case_data_font_size" />

            <TextView
                android:id="@+id/commander_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/commander" />

            <TextView
                android:id="@+id/commander"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="@dimen/case_data_font_size" />

            <TextView
                android:id="@+id/date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/date" />

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="@dimen/case_data_font_size" />

            <TextView
                android:id="@+id/status_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/status" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/case_data_font_size" />

            <TextView
                android:id="@+id/description_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/description" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="89dp"
                android:ems="10"
                android:gravity="left"
                android:lines="3"
                android:maxLines="3"
                android:textSize="@dimen/case_data_font_size" />

            <Button
                android:id="@+id/edit_case_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/edit_case" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>