
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#CCCCCC"
    tools:context=".MainActivity" >

        <Button
            android:id="@+id/case_button"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:background="#0000CC"
            android:onClick="goToCase"
            android:text="@string/case_string"
            android:textColor="#ffffff"
            android:textSize="50sp" />

        <Button
            android:id="@+id/buttonKarta"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/map"
            android:background="#0000CC" 
            android:textSize="50sp"
            android:textColor="#ffffff"
            
            android:onClick="goToMap"
            />

        <Button
            android:id="@+id/buttonInformation"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/information"
            android:background="#0000CC"
            android:textSize="50sp"
            android:textColor="#ffffff"
            
            android:onClick="goToInformation"
            />

        <Button
            android:id="@+id/buttonKontakter"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/contacts"
            android:background="#0000CC"
            android:textSize="50sp"
            android:textColor="#ffffff"
            
            android:onClick="goToContacts"
            />


    </LinearLayout>

