<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    
            <EditText
                android:id="@+id/userIdInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userIdInput"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:paddingTop="64dp" />

            <EditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userPassword"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:paddingTop="64dp"
               	 />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="64dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/userLoginButton"
                android:onClick="checkLogin" />

</LinearLayout>
